--- a/src/styles/ContentNav.css
+++ b/src/styles/ContentNav.css
@@ -51,12 +51,12 @@ nav {
   font-size: 18px;
 }
 
-a {
+.nav-items {
   border-left: 2px solid transparent;
   transition: 0.5s;
   padding-left: 5px;
 }
 
-a:hover {
+.nav-items:hover {
   border-left: 2px solid #499ea4;
 }
