--- a/src/styles/NavCat.css
+++ b/src/styles/NavCat.css
@@ -3,7 +3,7 @@
   src: url(../font/Blackgold-qGAl.otf);
 }
 
-.logo {
+.logoo {
   font-family: black-gold;
   text-transform: uppercase;
   display: flex;
@@ -14,7 +14,7 @@
   margin: 0;
 }
 
-.foto-logo {
+.foto-logoo {
   font-family: 'Poppins', sans-serif;
   font-weight: 100;
   font-size: 12px;
