--- a/src/styles/LandingPage/LandingSlide.css
+++ b/src/styles/LandingPage/LandingSlide.css
@@ -1,6 +1,6 @@
 .item {
   min-width: 29.5rem;
-  min-height: 19rem;
+  min-height: 25rem;
   padding: 20px;
   margin-top: 2%;
 }
@@ -18,6 +18,7 @@
 .inner-carousel {
   display: flex;
   background: transparent;
+  width: 80%;
 }
 
 
@@ -29,4 +30,21 @@
 
 main {
   margin: 0 5%;
+}
+
+@media screen and (max-width: 768px) {
+  .carousel {
+    width: 50%;
+    height: 100%;
+    overflow: visible;
+  }
+
+  main {
+    margin: 0 1%;
+  }
+
+  .item {
+    min-width: 100%;
+    min-height: 100%;
+  }
 }
