--- a/src/styles/ContentNav.css
+++ b/src/styles/ContentNav.css
@@ -11,7 +11,6 @@
   font-size: 56px;
   align-items: center;
   color: #303030;
-  margin: 0;
 }
 
 .foto-logo {
@@ -59,4 +58,30 @@ nav {
 
 .nav-items:hover {
   border-left: 2px solid #499ea4;
+}
+
+
+@media screen and (max-width: 415px) {
+  .content-nav {
+    font-size: 8px;
+  }
+
+  .logo-items {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+  }
+
+  #logo-resp {
+    margin-left: 20%;
+  }
+
+  .logo {
+    font-size: 32px;
+  }
+
+  .foto-logo {
+    font-size: 8px;
+  }
 }
