--- a/src/styles/LandingPage/LandingContent.css
+++ b/src/styles/LandingPage/LandingContent.css
@@ -87,3 +87,13 @@
     margin: 3% 3%;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .text-intro {
+    font-size: 50px;
+  }
+
+  .text-size {
+    font-size: 55px;
+  }
+}
