--- a/src/styles/LandingPage/LadinginPage.css
+++ b/src/styles/LandingPage/LadinginPage.css
@@ -42,6 +42,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-left: 0;
   }
 
   .ladingPage {
@@ -50,5 +51,9 @@
     height: 100%;
     overflow-x: hidden;
     overflow-y: hidden;
+  }
+
+  .rodape {
+    visibility: hidden;
   }
 }
