--- a/src/styles/LandingPage/LandingContent.css
+++ b/src/styles/LandingPage/LandingContent.css
@@ -89,6 +89,14 @@
 }
 
 @media screen and (max-width: 768px) {
+  .content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 2vh;
+    margin: 3% 3%;
+  }
+
   .text-intro {
     font-size: 50px;
   }
